--- a/index.html
+++ b/index.html
@@ -43,6 +43,11 @@
     </ol>
     <hr>
 
+    <h3>Education</h3>
+    <p>Bachelor in IT</p>
+    <p>King's Own Institute</p>
+    <hr>
+
     <h3>Projects</h3>
     <ul>
         <li>Build a calculator using html,css and javascript.</li>
